# Fk-Diffusion-Steering

discrete_diffusion/: .gitignore  README.md  fk_diffusion.py  fk_llada.py  generate_with_fk.py  pyproject.toml  reward_functions.py  summary_utils.py
discrete_diffusion/configs/: fk_steering_config.yaml
discrete_diffusion/scripts/: run_cola_reward.sh  run_gpt2_reward.sh  run_gpt2_reward_llada.sh  run_infinigram_reward.sh  run_toxicity_reward.sh  run_toxicity_reward_llada.sh
discrete_diffusion/utils/: __init__.py  distributed.py  distributed_fs.py  logging.py  torch_helpers.py
