[project]
name = "fk-dlm-steering"
version = "0.1.0"
description = "Fk Steering for DLM. From https://github.com/zacharyhorvitz/Fk-Diffusion-Steering/tree/main/discrete_diffusion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.3.2",
  "datasets>=4.5.0",
  "hydra-core>=1.3.2",
  "infini-gram>=2.6.0",
  "lightning>=2.6.1",
  "matplotlib>=3.9.0",
  "ninja>=1.13.0",
  "packaging>=26.0",
  "psutil>=7.2.2",
  "rich>=14.3.3",
  "timm>=1.0.26",
  "transformers==4.46.3",
]

[project.optional-dependencies]
cpu = [
  "torch",
  "torchvision",
]
cu124 = [
  "torch",
  "torchvision",
  "flash-attn>=2.8.3",
]
cu126 = [
  "torch",
  "torchvision",
  "flash-attn>=2.8.3",
]
cu128 = [
  "torch",
  "torchvision",
  "flash-attn>=2.8.3",
]
cu130 = [
  "torch",
  "torchvision",
  "flash-attn>=2.8.3",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
    { extra = "cu126" },
    { extra = "cu128" },
    { extra = "cu130" },
  ],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]
